Fix CSS of multiple shifts on a single day
The shift tags no longer wrap to multiple lines and are more compact.

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -11,3 +11,15 @@
 .App .modal {
     color: #333;
 }
+
+.App .tags.is-multi-shift {
+    display: flex;
+    flex-direction: row;
+    white-space: nowrap;
+    flex-wrap: nowrap;
+}
+
+.App .tags.is-multi-shift .tag {
+    display: inline-block;
+    padding: 0.2rem;
+}
